
spatialwarnings v3.1.0 (Release date: unknown)
==============================================

This release has received external contributions from K. Siteur

Improvements: 
  
  * The type of neighborhood can now be specified in all patch-related functions, 
      including high-level functions (e.g. patchdistr_sews)
  
New indicators: 
  
  * Clustering of pairs (e.g. Schneider et al. 2016)
  
  * Indicators based on the LSW distribution (Siteur et al. 2023)

Bug fixes: 
  
  * Documentation improvements and minor fixes 

spatialwarnings v3.0.3 (Release date: 2022-03-21)
=================================================
  
This release has received external contributions from J. Guerber.

Improvements: 

  * In patch size distribution plots, fits are now rescaled when xmin is above 1 
      so they overlay nicely on the observed distribution
  
  * Better handling of errors in segmented::segmented() when fitting variograms 
  
Bug fixes: 
  
  * Fixed an error occurring when using xmin = "estimate" in patchdistr_sews
  
  * Remove calls to assert() that were leftover from testing (CRAN policy)
  
spatialwarnings v3.0.2 (Release date: 2021-12-16)
=================================================
  
Improvements: 
  
  * Matrix attributes are now preserved when generating null matrices (except 
      when shuffling the original matrix, null_method = 'perm')
  
Bug fixes: 
  
  * Computation of Moran's I is now accurate for small matrices
  
spatialwarnings v3.0.0 (Release date: 2021-05-19) 
=================================================

Improvements: 

  * Documentation extended and improved
  
  * Fitting of distributions now uses 'plexpo' and 'trunc' to refer to the 
      exponent of a power-law ("slope") and its exponential truncation (from 
      "expo" and "rate", which were ambiguous)
  
  * EXPERIMENTAL: Variogram-based indicators have been added. Note that this 
      deserves more testing and application to real-world data to make sure that