@@ -37,10 +37,9 @@ the whole range of observed patch sizes)}
 matrix when reaching the side}
 
 \item{nbmask}{Either "moore" for 8-way neighborhood, "von_neumann" for four-way 
-neighborhood (default), or a square matrix with an odd number of lines and columns 
-that describes which neighbors are to be considered around a cell. Default 
-is 4-way or Von Neumann neighborhood (the neighborhood of a cell comprises the cell 
-above, below, on the right and on the left of the target cell).}
+neighborhood (default), or a 3x3 matrix describing which neighbors to 
+consider around a cell. See \code{\link{patchsizes}} for details on how to specify 
+such neighborhoods.}
 }
 \value{
 A data.frame (or a list of these if x is a list) with the 
