@@ -41,9 +41,9 @@ distributions}
 matrix when reaching the side}
 
 \item{nbmask}{Either "moore" for 8-way neighborhood, "von_neumann" for four-way 
-neighborhood (default), or a square matrix with an odd number of lines and columns 
-that describes which neighbors are to be considered around a cell. See
-\code{\link{patchsizes}} for details on how to specify more advanced neighborhoods.}
+neighborhood (default), or a 3x3 matrix describing which neighbors to 
+consider around a cell. See \code{\link{patchsizes}} for details on how to specify 
+such neighborhoods.}
 }
 \value{
 A list object of class 'psdfit' containing among other things 
