@@ -7,13 +7,14 @@ This release has received external contributions from K. Siteur
 Improvements: 
   
   * The type of neighborhood can now be specified in all patch-related functions, 
-      including high-level functions (e.g. patchdistr_sews)
+      including high-level functions (e.g. patchdistr_sews). Neighborhood can also be 
+      specified using "von_neumann" or "moore", on top of a 3x3 matrix
   
 New indicators: 
   
   * Clustering of pairs (e.g. Schneider et al. 2016)
   
-  * Indicators based on the LSW distribution (Siteur et al. 2023)
+  * Indicators related to the LSW distribution (Siteur et al. 2023)
 
 Bug fixes: 
   
